fixed the thumbnail in the upload page by changing its width to prevent overflow

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -149,17 +149,12 @@
             background:url(../../assets/images/Mohan-muruge.jpg);
             background-size: cover;
             border-radius: 50%;
-            width: 4rem;
-            max-height: 4rem;
+            width: 3rem;
+            max-height: 3rem;
             object-fit: contain;
             margin:1rem 0;
         }
-        &__button{
-            height:3.6rem;
-        }
-        &__input{
-            height:3.6rem;
-        }
+        
         &__button-container{
             width: 25%;
             
