--- a/src/components/sideVideos/SideVideos.scss
+++ b/src/components/sideVideos/SideVideos.scss
@@ -66,7 +66,6 @@
 @include breakpoint.large{
     .sidevideos{
         border-top: none;
-        border-left: 1px solid $divider-color;
         padding-top: 2.5rem;
     &__wrapper{
         width: 90%;
