--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -31,4 +31,8 @@ html, body {
       width: 60%;
       
     }
+    .mainPage__containers-two{
+      border-left: 1px solid $divider-color;
+      
+    }
   }
