--- a/src/pages/videoUpload/VideoUpload.scss
+++ b/src/pages/videoUpload/VideoUpload.scss
@@ -5,6 +5,9 @@
 .upload__heading,.upload__subheading{
     margin: 0;
 }
+a{
+    text-decoration: none;
+}
 .upload{
     padding: 0 1rem;
     &__heading{
@@ -14,7 +17,14 @@
     padding-top: 1.5rem;
     padding-bottom: 0.5rem;
     }
-
+    &__title-wrapper{
+        padding-top: 2rem;
+    
+    }
+    &__description-wrapper{
+        padding-top: 2rem;
+    
+    }
     &__subheading{
     color: $secondary-text-color;
     font-size: 0.95rem;
@@ -66,6 +76,9 @@
             font-family: Avenir-demi;
             margin-top: 2rem;
             }
+            &--tablet{
+                display: none;
+            }
     
     
      }
@@ -102,7 +115,7 @@
             padding-top: 2.5rem;
         }
         &__thumbnail{
-            width: 50%;
+            width: 30rem;
             height: 16rem;
         }
         &__button{
@@ -114,12 +127,27 @@
             border-top: 1px solid $divider-color;
             padding-top: 2rem;
             justify-content: flex-end;
+            margin-bottom: 2rem;
            
         }
+            &--mobile{
+                display: none;
+            }
+            &--tablet{
+                display: block;
+            }
         
     }
     &__input--description{
         margin-bottom: 2rem;
+        }
+        &__title-wrapper{
+            padding-top: 2rem;
+        
+        }
+        &__description-wrapper{
+            padding-top: 2rem;
+        
         }
     }
 }
@@ -140,11 +168,11 @@
             padding-bottom: 1.5rem;
         }
         &__subheading{
-            padding-top: 2.5rem;
+            padding-top: 2rem;
         }
         &__thumbnail{
             width: 50%;
-            height: 16rem;
+            height: 13rem;
         }
         &__button{
             width: 13rem;
@@ -157,7 +185,12 @@
             justify-content: flex-end;
            
         }
-        
+            &--mobile{
+                display: none;
+            }
+            &--tablet{
+                display: block;
+            }
     }
     &__input--description{
         margin-bottom: 2rem;
@@ -168,9 +201,17 @@
        justify-content: space-between;
     }
     .upload__thumbnail{
-        width: 25rem;
+        width: 24rem;
     }
     .upload__form-wrapper{
-        width: 70%;
+        width: 57%;
+    }
+    .upload__title-wrapper{
+        padding-top: 2rem;
+    
+    }
+    .upload__description-wrapper{
+        padding-top: 2rem;
+    
     }
 }
